fix: title超长overflow

--- a/src/BoolWidget/index.less
+++ b/src/BoolWidget/index.less
@@ -16,10 +16,10 @@
   color: #000;
   &-title{
     flex: 1;
-    max-width: 50%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    margin-right: 2px;
     display: flex;
     font-size: 16px;
     span{
