--- a/src/components/Card/Card.less
+++ b/src/components/Card/Card.less
@@ -28,6 +28,7 @@
     line-height: 20px;
     color: #A1A7B2;
     display: flex;
+    white-space: nowrap;
     align-items: center;
   }
   &__ft{
